--- a/56_Positional_Encoding_Transformer.ipynb
+++ b/56_Positional_Encoding_Transformer.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/55_LoRA_Fine_Tuning_Math.ipynb\" target=\"_parent\">\n",
+    "<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/56_Positional_Encoding_Transformer\" target=\"_parent\">\n",
     "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n"
    ]
