--- a/63_Diffusion_Models_DDPM.ipynb
+++ b/63_Diffusion_Models_DDPM.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d3a8ff7f",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/63_Diffusion_Models_DDPM.ipynb\" target=\"_parent\">\n",
+    "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2847fe03",
    "metadata": {},
    "source": [
